# NRA

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_RU.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build_test.yml  ci.yml  publish.yml  release.yml  sync_hf.yml
bench_tool/: Cargo.toml
bench_tool/src/: main.rs
docs/: GENERAL_ARCHIVING_REPORT_RU.md  HF_README_CIFAR10.md  HF_README_FOOD101.md  HF_README_NRA_BENCHMARKS.md  HUGGINGFACE_DATASET_README.md  NRA_DEVELOPER_GUIDE_RU.md  nra_whitepaper.md  nra_whitepaper_ru.md
docs/assets/: demo.cast  demo_convert.cast  demo_convert_ru.cast  demo_local.cast  demo_local_ru.cast  demo_ru.cast  demo_train.cast  demo_train_ru.cast
examples/: example_pytorch.py  stream_from_cloud.py
nra-cli/: Cargo.toml
nra-cli/src/: converter.rs  main.rs
nra-core/: Cargo.toml
nra-core/examples/: basic_roundtrip.rs
nra-core/src/: async_reader.rs  beta_reader.rs  beta_writer.rs  checksum.rs  codec.rs  compression.rs  crypto.rs  dedup.rs  delta.rs  format.rs  fuse.rs  lib.rs  manifest.rs  metrics.rs  reader.rs  sampler.rs  stream_writer.rs  vector_index.rs  writer.rs
nra-core/tests/: e2e_server.rs  integrity.rs
nra-python/: Cargo.toml  README.md  adapters.py  honest_benchmark.py  pack_competitors.py  pyproject.toml  test_pytorch_beta.py  test_pytorch_cloud.py  ultimate_benchmark.py
nra-python/nra_datasets/: __init__.py  __init__.pyi  nra_loader.py
nra-python/src/: lib.rs
nra-registry/: Cargo.toml
nra-registry-server/: Cargo.toml
nra-registry-server/src/: main.rs
nra-registry/examples/: async_stream.rs  cloud_stream.rs
nra-registry/src/: http_reader.rs  http_stream.rs  lib.rs
nra-spec/: Cargo.toml  nra_manifest.fbs
nra-tensor/: Cargo.toml
nra-tensor/examples/: mmap_safetensors.rs
nra-tensor/src/: lib.rs
scripts/: RECORDING_GUIDE.md  benchmark_cloud.py  benchmark_mac.py  convert_cifar10.py  demo_convert.py  demo_convert_ru.py  demo_local.py  demo_local_ru.py  demo_ru.py  demo_train.py  demo_train_ru.py  dump_cifar10.py  generate_hf_datasets.py  hf_dataset_card.md  record_demo.py  recover_raw_data.py  render_charts.py  repack_pokemon.py  train_hf_demo.py  train_tar_demo.py
scripts/benchmarks/: benchmark_v3.py  global_benchmark.py  honest_benchmark.py  pack_competitors.py  ultimate_benchmark.py  update_benchmark.py
scripts/utils/: generate_ultimate_data.py  nra_hub_server.py  range_server.py  train_real_hub.py
tests/: e2e_live_server.sh  test_hf_loader.py
