[workspace]
members = [
    "nra-spec",
    "nra-core",
    "nra-cli",
    "nra-python",
    "nra-tensor",
    "nra-registry",
    "nra-registry-server",
    "bench_tool",
]
exclude = ["nra-gui"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2024"
authors = ["NRA Project Authors"]
license = "MIT"
description = "Neural Ready Archive: A fast, cloud-native file archive optimized for Machine Learning."

[workspace.dependencies]
flatbuffers = "24.3.25"
zstd = "0.13"
sha2 = "0.10"
crc32fast = "1.4"
monoio = "0.2"
kvikio = "0.1" # placeholder for GPUDirect storage bindings
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
ed25519-dalek = "2.1"
pyo3 = "0.22"
eframe = "0.29.0"
rfd = "0.15.0"
fastcdc = "3"
blake3 = "1"
lz4_flex = "0.11"
aes-gcm = "0.10"
rayon = "1.10"
tar = "0.4.45"
zip = "8.6.0"
flate2 = "1.1.9"
fuser = "0.14"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
