[package]
name = "nra-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
fuse = ["dep:fuser", "dep:libc"]

[dependencies]
zstd.workspace = true
sha2.workspace = true
crc32fast.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
fastcdc.workspace = true
blake3.workspace = true
tokio = { workspace = true, features = ["sync"] }
lz4_flex.workspace = true
aes-gcm.workspace = true
rayon.workspace = true
fuser = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
memmap2 = "0.9.10"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.10.1"
