[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "nra"
description = "Neural Ready Archive — stream, deduplicate, and train on ML datasets without downloading. Built in Rust."
readme = "README.md"
license = {text = "MIT"}
keywords = ["machine-learning", "datasets", "streaming", "deduplication", "huggingface"]
authors = [{name = "NRA Team"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/zevatov/NRA"
Documentation = "https://github.com/zevatov/NRA"
Repository = "https://github.com/zevatov/NRA"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "nra"
python-packages = ["nra_datasets"]
